Fixed spacing in the about section

--- a/app/assets/styles/base/_mixins.css
+++ b/app/assets/styles/base/_mixins.css
@@ -15,3 +15,9 @@
         @mixin-content;
     }
 }
+
+@define-mixin atExtraLarge {
+    @media (min-width: 1400px) {
+        @mixin-content;
+    }
+}
